# propractice-ai

.github/workflows/: evaluation.yml
ai_feedback/: .dockerignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
ai_feedback/ai_feedback/: ai.py  authentication.py  config.py  main.py  models.py  prompts.py  utils.py
ai_feedback/ai_feedback/constants/: conditional_prompts.py  fallback_prompts.py  prompts.py  translations.py
ai_feedback/data/answers/set_1/: 1.json  2.json  3.json
ai_feedback/data/answers/set_2/: 1.json
ai_feedback/data/answers/set_3/: 1.json
ai_feedback/data/answers/set_4/: 1.json
ai_feedback/data/answers/set_5/: 1.json  2.json  3.json
ai_feedback/data/challenges/: payload_1.json  payload_2.json  payload_3.json
ai_feedback/data/demo_example/: challenge.json
ai_feedback/data/demo_example/responses/: bad-testing.json  complete-good-reading.json
ai_feedback/data/demo_example/videos/: incomplete-partial-reading.webm
ai_feedback/data/sets/set_1/: 1.mkv  2.mkv  3.mkv  notes.txt
ai_feedback/data/sets/set_2/: 1.webm
ai_feedback/evaluation/: README.md  __init__.py  config.py  constants.py  entrypoint.py  evaluation_config.py  evaluator.py  extractor.py  run_evaluation.py  similarity.py  utils.py
ai_feedback/scripts/: deploy-dev.sh  deploy.sh  generate_requirements.sh  send_request.py
