[tool.poetry]
name = "ai-feedback"
version = "0.1.0"
description = ""
authors = ["Danut Matei <danut.matei@stxnext.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-multipart = "^0.0.20"
fastapi = "^0.115.12"
uvicorn = "^0.34.1"
requests = "^2.32.3"
pydantic-settings = "^2.8.1"
pypdf2 = "^3.0.1"
openai = "^1.74.0"
loguru = "^0.7.3"
langfuse = "^2.60.3"
python-jose = {extras = ["cryptography"], version = "^3.4.0"}


[tool.poetry.group.dev.dependencies]
dotenv = "^0.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
